syntax = "proto3";

package dxos.tasks;

message Task {
  option (object) = true;

  string title = 1;
  bool completed = 2;
  Task previous = 3;
}

message TaskList {
  option (object) = true;

  string title = 1;
  repeated Task tasks = 2;
}